--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ title: Mint, A fresh PHP framework for modern web applications | Mint
 
     <p>
       You can also clone the project with <a href="http://git-scm.com">Git</a>
-      by running: <pre>$ git clone git://github.com/Olivine-Labs/Mint</pre>
+      by running: <pre class="prettyprint">$ git clone git://github.com/Olivine-Labs/Mint</pre>
     </p>
   </div>
 </div>
