--- a/getting-started.html
+++ b/getting-started.html
@@ -14,15 +14,49 @@ title: Getting Started | Mint
     </p>
 
     <ol>
-      <li><a href="#step-1">Set up EC2 with Apache and PHP</a>
-      <li><a href="#step-2">Set up MongoDB</a>
-      <li><a href="#step-3">Download Mint</a>
-      <li><a href="#step-4">Including Mint Core in Your Project</a>
-      <li><a href="#step-5">Writing Your Own Code</a>
+      <li><a href="#step-1">Set up EC2 with Apache, PHP, and MongoDB</a>
+      <li><a href="#step-2">Download Mint</a>
+      <li><a href="#step-3">Including Mint Core in Your Project</a>
+      <li><a href="#step-4">Writing Your Own Code</a>
     </ol>
 
-    <a name="step-1"></a>
-    <h2>Set up EC2 with Apache and PHP</h2>
+    <section id="step-1">
+      <header class="page-header">
+        <h1>Set up EC2 with Apache and PHP <small>Run your own server for fun and profit</small></h1>
+      </header>
+
+      <p>
+        We use EC2 for everything, because it's easy and cheap, and it gives
+        you the ability to make systems configurations changes really easily-
+        it's a dedicated server on a budget.
+      </p>
+
+      <h2>Setting up the Instance</h2>
+
+      <h2>Installing and configuring Apache</h2>
+
+      <h2>Installing and configuring PHP</h2>
+
+      <h2>Installing and configuring MongoDB</h2>
+    </section>
+
+    <section id="step-2">
+      <header class="page-header">
+        <h1>Download Mint <small>Drop in to install, and use Git to update</small></h1>
+      </header>
+
+      <p>
+        You can do this one of two ways: simply download the code and put it,
+        in your project, or if you're using Git, you can include it as a
+        submodule and be able to fetch updates as we update the Mint
+        repository.
+      </p>
+
+      <h2>Getting the code</h2>
+
+      <h2>Optional: Setting up a submodule in your project</h2>
+    </section>
+
   </section>
 
   <div class="span6">
